Alert Email - Da testare

--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -184,7 +184,7 @@
 									<th th:text="#{label.stato}"></th>
 									<th th:text="#{label.numero_partecipanti}">label.titolo</th>
 									<th th:text="#{label.durata}">label.ore_corso</th>
-									<th th:text="#{label.data_scadenza_pagamento}">label.data_scadenza_pagamento</th>
+									<th th:text="#{label.data_scadenza_rendiconto}">label.data_scadenza_pagamento</th>
 									<th th:text="#{label.azioni}">label.azioni</th>
 								</tr>
 							</thead>
