--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -194,7 +194,7 @@
 									<td th:if="${#authentication.principal.hasProfile('SEGRETERIA')}" th:text="${evento.provider.denominazioneLegale}"></td>
 									<td th:text="${evento.edizione}"></td>
 									<td th:text="${evento.proceduraFormativa.name()}"></td>
-									<td th:text="${evento.titolo}"></td>
+									<td style="word-break: break-word" th:text="${evento.titolo}"></td>
 
 									<td th:if="${evento.proceduraFormativa == T(it.tredi.ecm.dao.enumlist.ProceduraFormativa).FAD}">
 										<span></span>
@@ -240,6 +240,9 @@
 						"bFilter" : false,
 						"bInfo" : false,
 						"bPaginate" : false,
+						 "columnDefs": [
+					                    {"targets": 3, "width": "2000px"},
+					                  ],
 
 					})
 
