--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -74,6 +74,16 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4" onclick="goTo('provider/eventi/BOZZA/list')">
+						<div class="tile-stats clickable">
+							<div class="icon"><i class="fa fa-pencil"></i></div>
+							<div class="col-xs-10">
+			                	<div class="count" th:text="${homeWrapper.eventiBozza}"></div>
+			                	<h3 class="tile-h3" th:text="${homeWrapper.eventiBozza == 1 ? #messages.msg('label.evento') : #messages.msg('label.eventi')}"></h3>
+			                	<p class="count-text" th:text="#{label.eventi_in_bozza}">In bozza</p>
+							</div>
+						</div>
+					</div>
 				</div>
 
 				<!-- REFEREE -->
