disabilitato registrazione provider per produzione

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,8 +48,10 @@
 						<div class="clearfix"></div>
 						<div class="separator">
 							<p class="change_link row">
+								<!-- TODO DISABILITATO PER LA PRODUZIONE
 								<a th:href="@{/providerRegistration}"
 									class="to_register col-xs-5" th:text="#{label.registrati}">label.registrati</a>
+								 -->
 								<a href="#toreset" class="reset_pass col-xs-5"
 									th:text="#{label.password_dimenticata}">label.password_dimenticata?</a>
 							</p>
