--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -79,8 +79,8 @@
 										<td th:text="${eventoPF.getCodiceIdentificativo()}"></td>
 										<td th:text="${eventoPF.titolo}"></td>
 										<td th:text="${eventoPF.proceduraFormativa.name()}"></td>
-										<td th:text="${eventoPF.obiettivoNazionale.nome}"></td>
-										<td th:text="${eventoPF.obiettivoRegionale.nome}"></td>
+										<td th:text="${eventoPF.obiettivoNazionale?.nome}"></td>
+										<td th:text="${eventoPF.obiettivoRegionale?.nome}"></td>
 										<td>
 											<a class="btn btn-primary btn-table single" th:href="@{|/provider/${providerId}/eventoPianoFormativo/${eventoPF.id}/fulfill|}"><i class="glyphicon glyphicon-step-forward"> </i> <span th:text="#{label.accredita}"> </span></a>
 										</td>
@@ -220,7 +220,9 @@
 										<div class="button-container single">
 											<a class="btn btn-primary btn-table double" th:if="${evento.canEdit()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/edit|}"><i class="fa fa-pencil"> </i> <span th:text="#{label.modifica}"> </span></a>
 											<button class="btn btn-danger btn-table double" th:if="${evento.canEdit()}" th:onclick="|confirmDeleteEventoModal('${evento.provider.id}','${evento.id}','${evento.proceduraFormativa}','${evento.codiceIdentificativo}','${evento.stato}')|"><i class="fa fa-trash"></i><span th:text="${evento.stato == T(it.tredi.ecm.dao.enumlist.EventoStatoEnum).BOZZA} ? #{label.elimina} : #{label.annulla}"> </span></button>
+											<!-- TODO DISABILITATO PER LA PRODUZIONE
 											<a class="btn btn-success btn-table double" th:if="${evento.canDoPagamento()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/paga|}"><i class="fa fa-euro"> </i> <span th:text="#{label.paga}"> </span></a>
+											-->
 											<a class="btn btn-warning btn-table double" th:if="${evento.canDoRendicontazione()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/rendiconto|}"><i class="fa fa-file-text"> </i> <span th:text="#{label.rendiconto}"> </span></a>
 											<a class="btn btn-primary btn-table single" th:if="${evento.canDoUploadSponsor()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/allegaContrattiSponsor|}"><i class="fa fa-file"> </i> <span th:text="#{label.allega_contratti_sponsor}"> </span></a>
 										</div>
