--- a/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoFragment.html
+++ b/src/main/resources/templates/eventoPianoFormativo/eventoPianoFormativoFragment.html
@@ -260,7 +260,7 @@
 							</th:block>
 							<th:block th:if="${showOnly or enableField}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11" id="obiettivo_formativo_regionale">
-									<div class="value" th:text="${eventoWrapper.evento.obiettivoRegionale.nome}"></div>
+									<div class="value" th:text="${eventoWrapper.evento.obiettivoRegionale?.nome}"></div>
 								</div>
 								<div th:if="${enableField}" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
 		                    		<input class="flat" type="checkbox" th:field="${richiestaIntegrazioneWrapper.selected}" th:value="${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.obiettivoRegionale')}" />
@@ -361,7 +361,7 @@
 						</div>
 
 						<div th:class="${valutabile ? 'divider' : 'divider-dashed'}"></div>
-						
+
 						<div>
 							<th:block th:if="${editabile or valutabile}">
 								<label th:class="${valutabile ? 'margin-valutabile text-center col-lg-1 col-md-1 col-sm-1 col-xs-1' : 'control-label col-xs-1'}" th:text="${!showOnly ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('evento.discipline') : ''}"></label>
