--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -96,7 +96,7 @@
 								</ul>
 							</li>
 
-							<li id="osservatori" th:if="${#authentication.principal.hasProfile('OSSERVATORE')}">
+							<li id="osservatori" th:if="${#authentication.principal.hasProfile('COMPONENTE_OSSERVATORIO')}">
 								<a>
 									<i class="fa fa-edit"></i> <span th:text="#{label.osservatore_ecm}">label.osservatore_ecm</span>
 									<span class="fa fa-chevron-down"></span>
