--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -154,16 +154,16 @@
 		                </ul>
 		              </li>
 		              <li class="">
-					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.help}"></a>
+					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:manuale" th:text="#{label.help}"></a>
 					  </li>
 					  <li class="">
-					    <a target="new" href="https://salute-test.regione.veneto.it/web/ecm/moduli-e-documenti" th:text="#{label.moduli} + '/' + #{label.documenti}"></a>
+					    <a target="new" href="https://salute.regione.veneto.it/web/ecm/moduli-e-documenti" th:text="#{label.moduli} + '/' + #{label.documenti}"></a>
 					  </li>
 					  <li class="">
-					    <a target="new" href="https://salute-test.regione.veneto.it/web/e.c.m/faq" th:text="#{label.faq}"></a>
+					    <a target="new" href="https://salute.regione.veneto.it/web/ecm/faq" th:text="#{label.faq}"></a>
 					  </li>
 					  <li class="">
-					    <a target="new" href="https://salute-test.regione.veneto.it/web/e.c.m/home" th:text="#{label.portale}"></a>
+					    <a target="new" href="https://salute.regione.veneto.it/web/ecm/" th:text="#{label.portale}"></a>
 					  </li>
               		</ul>
 				</nav>
