Corretto validator eventi, inserito submit di default con validator

--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -1265,6 +1265,7 @@
 			};
 
 			function submitSave(){
+				$(".form-evento").attr("action", [[@{|/provider/${eventoWrapper.providerId}/evento/save|}]]);
 				$("#submitButton").click();
 			}
 
