--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -169,8 +169,7 @@
 			</div>
 
 			<form id="formEventoFAD" class="form-horizontal form-label-left form-evento"
-				th:action="@{|/provider/${eventoWrapper.providerId}/evento/save|}"
-				method="post" enctype="multipart/form-data"
+				method="post" enctype="multipart/form-data" th:action="@{|/provider/${eventoWrapper.evento.provider.id}/evento/validate|}"
 				novalidate="novalidate">
 
 				<!-- input hidden -->
