--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -224,8 +224,7 @@
 				</div>
 
 			<form id="formEventoFSC" class="form-horizontal form-label-left form-evento"
-				th:action="@{|/provider/${eventoWrapper.providerId}/evento/save|}"
-				method="post" enctype="multipart/form-data"
+				method="post" enctype="multipart/form-data" th:action="@{|/provider/${eventoWrapper.evento.provider.id}/evento/validate|}"
 				novalidate="novalidate">
 
 				<!-- input hidden -->
