--- a/src/main/resources/templates/accreditamento/accreditamentoList.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoList.html
@@ -49,7 +49,7 @@
 								</tr>
 							</thead>
 							<tbody th:unless="${#lists.isEmpty(accreditamentoList)}" th:remove="all-but-first">
-								<tr class="text-center" th:each="accreditamento : ${accreditamentoList}">
+								<tr th:each="accreditamento : ${accreditamentoList}">
 									<td><a th:href="@{|/accreditamento/${accreditamento.id}/show|}" th:text="${accreditamento.tipoDomanda.nome}">Provvisorio/Standard</a></td>
 									<td th:text="${accreditamento.provider.denominazioneLegale}">Provvisorio/Standard</td>
 									<td>
