function tutti no

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -422,6 +422,9 @@
 			function selezionaTuttiSi(){
 				$('input[value=true]').iCheck('check');
 			}
+			function selezionaTuttiNo(){
+				$('input[value=false]').iCheck('check');
+			}
 
 			function confirmDeleteEventoModal(providerId,eventoId,tipo,codiceIdentificativo,stato){
 			    $('#deleteModal').modal();
