Revert DatiAccreditamento WIP

--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -297,85 +297,31 @@
 													</tr>
 												</thead>
 												<tbody>
-													<!-- TIPOLOGIA FORMATIVA -->
+													<!-- DATI ACCREDITAMENTO -->
 													<tr>
-														<td th:if="${accreditamentoWrapper.datiAccreditamento.isTipologiaFormativaInserita()}"><a th:text="#{label.tipologia_formativa}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/tipologiaFormativa/show${urlParam}|}"></a></td>
-														<td th:unless="${accreditamentoWrapper.datiAccreditamento.isTipologiaFormativaInserita()}"><div th:text="#{label.tipologia_formativa}"></div></td>
+														<td th:unless="${accreditamentoWrapper.datiAccreditamento.new}"><a th:text="#{label.dati_accreditamento}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/${accreditamentoWrapper.datiAccreditamento.id}/show${urlParam}|}"></a></td>
+														<td th:if="${accreditamentoWrapper.datiAccreditamento.new}"><div th:text="#{label.dati_accreditamento}"></div></td>
 														<th:block th:unless="${enableField}">
-															<td	th:if="${accreditamentoWrapper.tipologiaFormativaStato}">
+															<td	th:if="${accreditamentoWrapper.datiAccreditamentoStato}">
 																<i class="fa table-icon fa-check green" th:title="${valutabile ? #messages.msg('label.valutato') : #messages.msg('label.inserito')}"></i>
 															</td>
-															<td	th:unless="${accreditamentoWrapper.tipologiaFormativaStato}">
+															<td	th:unless="${accreditamentoWrapper.datiAccreditamentoStato}">
 																<i class="fa table-icon fa-remove red" th:title="${valutabile ? #messages.msg('label.non_valutato') : #messages.msg('label.non_inserito')}"></i>
 															</td>
 														</th:block>
 														<td th:if="${editabile}">
 															<span style="white-space: nowrap">
-																<a th:unless="${accreditamentoWrapper.datiAccreditamento.isTipologiaFormativaInserita()}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/tipologiaFormativa/new|}" class="btn btn-success btn-table double"><i class="fa fa-sign-in"></i> <span th:text="#{label.inserisci}">Inserisci</span></a>
-																<a th:if="${accreditamentoWrapper.datiAccreditamento.isTipologiaFormativaInserita()}" class="btn btn-success btn-table double disabled"><i class="fa fa-sign-in"></i> <span th:text="#{label.inserisci}">Inserisci</span></a>
-																<a th:if="${accreditamentoWrapper.datiAccreditamento.isTipologiaFormativaInserita() and (!#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(accreditamentoWrapper.accreditamento.idEditabili, 'DATI_ACCREDITAMENTO')) or accreditamentoWrapper.canSegreteriaEdit)}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/tipologiaFormativa/edit|}" class="btn btn-primary btn-table double"><i class="fa fa-pencil"></i> <span th:text="#{label.modifica}">Modifica</span></a>
-																<a th:if="${!accreditamentoWrapper.datiAccreditamento.isTipologiaFormativaInserita() or (#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(accreditamentoWrapper.accreditamento.idEditabili, 'DATI_ACCREDITAMENTO')) and !accreditamentoWrapper.canSegreteriaEdit)}" class="btn btn-primary btn-table double disabled"><i class="fa fa-pencil"></i> <span th:text="#{label.modifica}">Modifica</span></a>
+																<a th:if="${accreditamentoWrapper.datiAccreditamento.new}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/new|}" class="btn btn-success btn-table double"><i class="fa fa-sign-in"></i> <span th:text="#{label.inserisci}">Inserisci</span></a>
+																<a th:unless="${accreditamentoWrapper.datiAccreditamento.new}" class="btn btn-success btn-table double disabled"><i class="fa fa-sign-in"></i> <span th:text="#{label.inserisci}">Inserisci</span></a>
+																<a th:if="${!accreditamentoWrapper.datiAccreditamento.new and (!#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(accreditamentoWrapper.accreditamento.idEditabili, 'DATI_ACCREDITAMENTO')) or accreditamentoWrapper.canSegreteriaEdit)}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/${accreditamentoWrapper.datiAccreditamento.id}/edit|}" class="btn btn-primary btn-table double"><i class="fa fa-pencil"></i> <span th:text="#{label.modifica}">Modifica</span></a>
+																<a th:if="${accreditamentoWrapper.datiAccreditamento.new or (#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(accreditamentoWrapper.accreditamento.idEditabili, 'DATI_ACCREDITAMENTO')) and !accreditamentoWrapper.canSegreteriaEdit)}" class="btn btn-primary btn-table double disabled"><i class="fa fa-pencil"></i> <span th:text="#{label.modifica}">Modifica</span></a>
 															</span>
 														</td>
 														<td th:if="${valutabile}">
-															<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/tipologiaFormativa/validate|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${accreditamentoWrapper.canValutaDomanda ? 'fa-pencil': 'fa-eye'}"></i> <span th:text="${accreditamentoWrapper.canValutaDomanda} ? #{label.valuta} : #{label.mostra}">Valuta/Mostra</span></a>
+															<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/${accreditamentoWrapper.datiAccreditamento.id}/validate|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${accreditamentoWrapper.canValutaDomanda ? 'fa-pencil': 'fa-eye'}"></i> <span th:text="${accreditamentoWrapper.canValutaDomanda} ? #{label.valuta} : #{label.mostra}">Valuta/Mostra</span></a>
 														</td>
 														<td th:if="${enableField}">
-															<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/tipologiaFormativa/enableField|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${'fa-pencil'}"></i> <span th:text="#{label.abilita_campi}">Abilita campi</span></a>
-														</td>
-													</tr>
-													<!-- DATI ECONOMICI -->
-													<tr>
-														<td th:if="${accreditamentoWrapper.datiAccreditamento.isDatiEconomiciInseriti()}"><a th:text="#{label.dati_economici}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiEconomici/show${urlParam}|}"></a></td>
-														<td th:unless="${accreditamentoWrapper.datiAccreditamento.isDatiEconomiciInseriti()}"><div th:text="#{label.dati_economici}"></div></td>
-														<th:block th:unless="${enableField}">
-															<td	th:if="${accreditamentoWrapper.datiEconomiciStato}">
-																<i class="fa table-icon fa-check green" th:title="${valutabile ? #messages.msg('label.valutato') : #messages.msg('label.inserito')}"></i>
-															</td>
-															<td	th:unless="${accreditamentoWrapper.datiEconomiciStato}">
-																<i class="fa table-icon fa-remove red" th:title="${valutabile ? #messages.msg('label.non_valutato') : #messages.msg('label.non_inserito')}"></i>
-															</td>
-														</th:block>
-														<td th:if="${editabile}">
-															<span style="white-space: nowrap">
-																<a th:unless="${accreditamentoWrapper.datiAccreditamento.isDatiEconomiciInseriti()}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiEconomici/new|}" class="btn btn-success btn-table double"><i class="fa fa-sign-in"></i> <span th:text="#{label.inserisci}">Inserisci</span></a>
-																<a th:if="${accreditamentoWrapper.datiAccreditamento.isDatiEconomiciInseriti()}" class="btn btn-success btn-table double disabled"><i class="fa fa-sign-in"></i> <span th:text="#{label.inserisci}">Inserisci</span></a>
-																<a th:if="${accreditamentoWrapper.datiAccreditamento.isDatiEconomiciInseriti() and (!#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(accreditamentoWrapper.accreditamento.idEditabili, 'DATI_ACCREDITAMENTO')) or accreditamentoWrapper.canSegreteriaEdit)}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiEconomici/edit|}" class="btn btn-primary btn-table double"><i class="fa fa-pencil"></i> <span th:text="#{label.modifica}">Modifica</span></a>
-																<a th:if="${!accreditamentoWrapper.datiAccreditamento.isDatiEconomiciInseriti() or (#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(accreditamentoWrapper.accreditamento.idEditabili, 'DATI_ACCREDITAMENTO')) and !accreditamentoWrapper.canSegreteriaEdit)}" class="btn btn-primary btn-table double disabled"><i class="fa fa-pencil"></i> <span th:text="#{label.modifica}">Modifica</span></a>
-															</span>
-														</td>
-														<td th:if="${valutabile}">
-															<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiEconomici/validate|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${accreditamentoWrapper.canValutaDomanda ? 'fa-pencil': 'fa-eye'}"></i> <span th:text="${accreditamentoWrapper.canValutaDomanda} ? #{label.valuta} : #{label.mostra}">Valuta/Mostra</span></a>
-														</td>
-														<td th:if="${enableField}">
-															<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiEconomici/enableField|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${'fa-pencil'}"></i> <span th:text="#{label.abilita_campi}">Abilita campi</span></a>
-														</td>
-													</tr>
-													<!-- DATI DELLA STRUTTURA ORGANIZZATIVA -->
-													<tr>
-														<td th:if="${accreditamentoWrapper.datiAccreditamento.isDatiStrutturaInseriti()}"><a th:text="#{label.dati_struttura}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiStruttura/show${urlParam}|}"></a></td>
-														<td th:unless="${accreditamentoWrapper.datiAccreditamento.isDatiStrutturaInseriti()}"><div th:text="#{label.dati_struttura}"></div></td>
-														<th:block th:unless="${enableField}">
-															<td	th:if="${accreditamentoWrapper.datiStrutturaStato}">
-																<i class="fa table-icon fa-check green" th:title="${valutabile ? #messages.msg('label.valutato') : #messages.msg('label.inserito')}"></i>
-															</td>
-															<td	th:unless="${accreditamentoWrapper.datiStrutturaStato}">
-																<i class="fa table-icon fa-remove red" th:title="${valutabile ? #messages.msg('label.non_valutato') : #messages.msg('label.non_inserito')}"></i>
-															</td>
-														</th:block>
-														<td th:if="${editabile}">
-															<span style="white-space: nowrap">
-																<a th:unless="${accreditamentoWrapper.datiAccreditamento.isDatiStrutturaInseriti()}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiStruttura/new|}" class="btn btn-success btn-table double"><i class="fa fa-sign-in"></i> <span th:text="#{label.inserisci}">Inserisci</span></a>
-																<a th:if="${accreditamentoWrapper.datiAccreditamento.isDatiStrutturaInseriti()}" class="btn btn-success btn-table double disabled"><i class="fa fa-sign-in"></i> <span th:text="#{label.inserisci}">Inserisci</span></a>
-																<a th:if="${accreditamentoWrapper.datiAccreditamento.isDatiStrutturaInseriti() and (!#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(accreditamentoWrapper.accreditamento.idEditabili, 'DATI_ACCREDITAMENTO')) or accreditamentoWrapper.canSegreteriaEdit)}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiStruttura/edit|}" class="btn btn-primary btn-table double"><i class="fa fa-pencil"></i> <span th:text="#{label.modifica}">Modifica</span></a>
-																<a th:if="${!accreditamentoWrapper.datiAccreditamento.isDatiStrutturaInseriti() or (#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(accreditamentoWrapper.accreditamento.idEditabili, 'DATI_ACCREDITAMENTO')) and !accreditamentoWrapper.canSegreteriaEdit)}" class="btn btn-primary btn-table double disabled"><i class="fa fa-pencil"></i> <span th:text="#{label.modifica}">Modifica</span></a>
-															</span>
-														</td>
-														<td th:if="${valutabile}">
-															<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiStruttura/validate|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${accreditamentoWrapper.canValutaDomanda ? 'fa-pencil': 'fa-eye'}"></i> <span th:text="${accreditamentoWrapper.canValutaDomanda} ? #{label.valuta} : #{label.mostra}">Valuta/Mostra</span></a>
-														</td>
-														<td th:if="${enableField}">
-															<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/datiStruttura/enableField|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${'fa-pencil'}"></i> <span th:text="#{label.abilita_campi}">Abilita campi</span></a>
+															<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/${accreditamentoWrapper.datiAccreditamento.id}/enableField|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${'fa-pencil'}"></i> <span th:text="#{label.abilita_campi}">Abilita campi</span></a>
 														</td>
 													</tr>
 												</tbody>
